[package]
name = "orbit-core"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0.18"
dirs = "5.0"
config = "0.15.19"